# flap

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile.3ds  Makefile.switch  flap.h  init.h  main.c  rect.c  rect.h  shader.c  shader.h  window.c  window.h  window_sdl.c
android/: .gitignore  Android.mk  AndroidManifest.xml  Application.mk  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/release/: android-release.apk
android/src/main/java/eu/willricard/flap/: FlapNativeActivity.java
android/src/main/res/drawable/: ic_launcher.xml
android/src/main/res/xml/: backup_rules.xml
assets/images/: atlas.t3s
assets/shaders/: Makefile  rect.frag  rect.frag.spv  rect.geom  rect.geom.spv  rect.vert  rect.vert.spv  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  sprite_es.frag  sprite_es.vert  sprite_gl.frag  sprite_gl.vert
gl/: init.c  rect.c  rect_gl.c  shader.c  shader.h  shader_gl.c  window.c  window_gl.c
glad/include/glad/: glad.h
glad/src/: glad.c
src/: assets.c  assets.h  assets_3ds.c  assets_3ds.h  assets_android.c  assets_desktop.c  assets_gl.c  assets_gl.h  assets_vk.c  assets_vk.h  buffer.c  buffer.h  device.c  device.h  error.c  error.h  flap.h  game.c  game.h  instance.c  instance.h  main.c  main_3ds.c  main_emscripten.c  main_gl.c  main_vk.c  pipeline.c  pipeline.h  pipeline_gl.c  pipeline_gl.h  pipeline_vk.c  pipeline_vk.h  rect.c  rect.h  rect_gl.c  rect_vk.c  renderer.c  renderer.c.bak  renderer.h  renderer_vk.c  (+31 more)
vk/: init.c  pipeline.c  pipeline.h  rect.c  renderer.c  renderer.h  shaders.h  window.c  window.h
vk/shaders/: rect.frag  rect.vert
